--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "description": "Shares the current page or a link via WhatsApp, letting you choose the contact.",
   "permissions": [
     "contextMenus",
-    "tabs"
+    "tabs",
+    "scripting"
   ],
   "background": {
     "service_worker": "background.js"
